--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^4.11.0",
+    "react-player": "^2.15.1",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.7.32",
