--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -55,7 +55,9 @@
           "passwordPolicyMinLength": 8
         },
         "signupAttributes": [],
-        "socialProviders": [],
+        "socialProviders": [
+          "FACEBOOK"
+        ],
         "usernameAttributes": [
           "EMAIL"
         ],
