--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 REACT_APP_API_REDLABORAL = https://f4zp4jdcal.execute-api.us-east-1.amazonaws.com/dev
-REACT_APP_API_USER_GROUP =  us-east-1_dnztuNPko
+REACT_APP_API_USER_GROUP =  us-east-1_4M3VOVvPY
 REACT_APP_API_RECAPTCHA = 6LdVu4YpAAAAAHQsmuLlBZvde0CDFCGszVv1BlSZ
 REACT_APP_API_RECAPTCHA_SECRET = 6LdVu4YpAAAAAGqZO-we1ptgTyRM16v7il-lGJKx
