--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.7.32",
+    "swiper": "^11.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
