responsive nav y asa y asa

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -41,7 +41,7 @@
       "customAuth": false,
       "dependsOn": [],
       "frontendAuthConfig": {
-        "mfaConfiguration": "OPTIONAL",
+        "mfaConfiguration": "OFF",
         "mfaTypes": [
           "TOTP"
         ],
